kubernetes/apps/system/home-assistant/app/externalservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-external
  namespace: system
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-external
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.1.236
    ports:
      - name: http
        port: 8123
        protocol: TCP
