kubernetes/apps/system/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: system
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
    - name: envoy-internal
      namespace: network
  hostnames:
    - home.erwanleboucher.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant-external
          port: 8123
